--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,9 +11,9 @@ pages:
 - About: 'about.md'
 
 site_name: termui
-repo_url: https://github.com/gizak/termui/
+repo_url: https://github.com/verdverm/termui/
 site_description: 'termui user guide'
-site_author: gizak
+site_author: verdverm
 
 docs_dir: '_docs'
 
