bug fixes, demo -> starterkit, better usage of Connector

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_script:
 
 script:
   - test -z $(gofmt -s -l $GO_FILES)         # Fail if a .go file hasn't been formatted with gofmt
-  - cd demo && go build
+  - go build
 
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
